added initial file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Git Demo</title>
   </head>
   <body class="container">
-    <h1>Git Tasks</h1>
+    <h1>Git Tasks Demo</h1>
 	<ul class="list-group">
 		<li class="list-group-item">Code conflict- Resolve</li>
 		<li class="list-group-item">Branch out from master and merging.</li>
