--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<li class="list-group-item">Code conflict- Resolve</li>
 		<li class="list-group-item">Branch out from master and merging.</li>
 		<li class="list-group-item">Stashing</li>
+		<li class="list-group-item">I'm Jerry</li>
 	</ul>
 
     <!-- Optional JavaScript -->
